--- a/booki-RVU/style.css
+++ b/booki-RVU/style.css
@@ -33,8 +33,8 @@ header {
 /* *****add code nav bar**** */
 
 .logo-img {
-    width: 61.09px;
-    height: 19px;
+    width: 3.818rem;
+    height: 1.188rem;
 }
 
 nav {
@@ -42,14 +42,15 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 24px;
-    margin-bottom: 20px;
+    margin-top: 1.5rem;
+    margin-bottom: 1.25rem;
     font-size: 1em;
     font-weight: 400;
+    text-align: center;
 }
 
 nav a {
-    margin: 20px 20px;
+    margin: 1.25rem 1.25rem;
     padding: 10px;
     text-decoration: none;
 }
@@ -57,14 +58,14 @@ nav a {
 nav ul {
     list-style-type: none;
     display: flex;
-    gap: 20px;  
+    gap: 1.25rem;  
 }
 
 /* ***add specific styles nav hébergements**** */
 
 .nav-hebergements {
     margin: 0;
-    padding-top: 20px;
+    padding-top: 1.25rem;
     color: var(--main-color); 
     transition-duration: 0.3s;  
 }
@@ -88,15 +89,16 @@ nav ul {
 /*add h1+P, header*/
 h1 {
     font-family: 'Raleway', sans-serif;
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: 700;
-    margin: 10px 0px;
+    margin: 0.625rem 0px;
 }
 
 p {
-    font-size: 16px;
+    font-size: 1em;
     font-weight: 400;
-    margin-bottom: 17.5px;
+    margin-bottom: 17.5px 0 17.5px 0;
+    padding: 0 10px;
 
 }
 
@@ -106,7 +108,7 @@ p {
 form {
     display: flex;
     flex-direction: row;
-    margin: 17.5px 0px;
+    margin: 0;
 }
 
 .fa-location-dot {
@@ -132,6 +134,10 @@ input[type="search"] {
     background-color: white;
     padding: 15px;
     box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
+    font-weight:bold;
+    font-size: 1.12rem;
+    color: black;
   }
 
 .button-search {
@@ -149,7 +155,6 @@ input[type="search"] {
     font-family: 'Raleway',sans-serif;
     font-weight: bold;
     text-align: center;
-    position: relative;
 }
 
 .button-search-text {
@@ -169,18 +174,18 @@ input[type="search"] {
     align-items: center;
     gap: 15px;
     font-family: 'raleway', sans-serif;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 700;
     font-weight: bold;
-    margin: 17.5px 0;
+   
 }
 
 .ul-filters {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px;
-    gap:15px;
+    padding: 0;
+    gap:0.938rem;
 }
 
 .button-filters {
@@ -192,7 +197,7 @@ input[type="search"] {
     border: 2px solid #F2F2F2;
     border-radius: 50px;
     font-family: 'Raleway', sans-serif;
-    font-size: 17px;
+    font-size: 1.63rem;
     font-weight: 700;
     color: black;
     cursor: default; 
@@ -231,7 +236,7 @@ input[type="search"] {
 
 .info-section p {
     margin: 0;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
 }
 
@@ -281,7 +286,7 @@ a {
 }
 
 .card-title {
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .euro {
@@ -433,6 +438,7 @@ a {
 }
     
 /*footer (add code)*/
+
 footer {
     display: flex;
     justify-content: space-around;
