--- a/booki-RVU/styles/styles-tablette.css
+++ b/booki-RVU/styles/styles-tablette.css
@@ -10,7 +10,7 @@
 .main-container {
         width: 100%;
         margin: 0;
-        padding: 0 20px ;
+        padding: 0 20px;
     }
 
 nav {
@@ -20,11 +20,40 @@ nav {
         margin: 20px 0;
     }
 
+    .nav-hebergements {
+        margin: 0;
+        padding-top: 1.1rem;  /* **22.4px** */
+        color: var(--main-color);  
+        border-top: 2px solid var(--main-color);
+    }
+    
+
 .info {
         margin: 20px 0;
     }
-    /***hébergements***/
 
+
+    /* *****section filter**** */
+
+.section-filters {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        font-size: 1.125rem;   /**18px**/
+        font-weight: 700;
+        margin: 35px 0 35px 0;
+    }
+
+
+    /**section hebergements***/
+
+    .hebergements-cards .card-title {
+        font-size: 14px;
+    }
+
+    .hebergements-cards .card-subtitle {
+        font-size: 13px;
+    }
 
 
     /***section populaire***/
@@ -32,7 +61,7 @@ nav {
 .populaires-cards {
         display: flex;
         flex-direction: row;
-        gap: 20px; /***à contrôler***/
+        gap: 20px;
 
     }
 
@@ -43,21 +72,28 @@ nav {
     justify-content: space-between;
 }
 
+.populaires-cards .card-title {
+    font-size: 14px;
+}
+
+.populaires-cards .card-subtitle {
+    font-size: 13px;
+}
       /****section activity*****/
 
+.card-activity {
+    max-height: 270px;
+    width: 100%;
+}
 
-.activies-cards {
-     
-     display: grid;
-     grid-template-columns: (repeat 4, 1fr);
-     max-height: 270px;
-     min-width: 193.5px;
-     gap: 30px;
-     grid-auto-rows: 270px;
-      }
-
+.card-activity img {
+        max-height: 200px;
+        width: 100%;
+    }
 
       /* ***footer**** */
+
+
 footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
